Bonded 2 apps via queue. Added properties configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,10 @@ subprojects {
 
         compile('org.apache.hadoop:hadoop-client:2.8.2') {
             exclude module: "slf4j-log4j12"
+            exclude group: "commons-beanutils"
         }
-        compile "org.apache.activemq:artemis-spring-integration:2.4.0"
+        compile "org.apache.activemq:artemis-spring-integration:2.3.0"
         compile "org.apache.geronimo.specs:geronimo-jms_2.0_spec:1.0-alpha-2"
+
     }
 }
