--- a/mail-processing-executor/build.gradle
+++ b/mail-processing-executor/build.gradle
@@ -4,7 +4,11 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.hbase', name: 'hbase-client', version: '1.3.1'
+
+    compile('org.apache.hbase:hbase-client:1.3.1') {
+        exclude module: "slf4j-log4j12"
+        exclude group: "commons-beanutils"
+    }
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
