--- a/mail-rest/src/main/resources/application.properties
+++ b/mail-rest/src/main/resources/application.properties
@@ -2,3 +2,11 @@ queue.url=tcp://localhost:61616?ha=true&amp;retryInterval=1000&amp;retryInterval
 queue.user=artemis
 queue.password=simetraehcapa
 queue.name=mailQueue
+
+spring.http.multipart.max-file-size=100MB
+server.port=7070
+multipart.enabled=false
+spring.http.multipart.enabled=false
+
+fs.defaultFS=hdfs://localhost:8020
+base.path=/test
