--- a/mail-processing-executor/build.gradle
+++ b/mail-processing-executor/build.gradle
@@ -10,5 +10,8 @@ dependencies {
         exclude group: "commons-beanutils"
     }
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile('org.springframework:spring-tx:5.0.1.RELEASE'){
+        exclude module: "slf4j-log4j12"
+        exclude group: "commons-beanutils"
+    }
 }
