--- a/mail-rest/build.gradle
+++ b/mail-rest/build.gradle
@@ -1,38 +1,26 @@
-
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
-
-
 buildscript {
     ext {
-        springBootVersion = '2.0.0.M5'
+        springBootVersion = '1.5.8.RELEASE'
     }
     repositories {
         mavenCentral()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
-
-
-repositories {
-    mavenCentral()
-    maven { url "https://repo.spring.io/snapshot" }
-    maven { url "https://repo.spring.io/milestone" }
-}
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web')
 
-    compile('org.springframework.boot:spring-boot-starter-webflux')
-    compile('org.springframework.boot:spring-boot-starter-undertow')
-    compile('org.springframework.boot:spring-boot-starter-websocket') {
-        exclude module: "spring-boot-starter-tomcat"
+    compile("commons-fileupload:commons-fileupload:1.3.3") {
+        exclude group: "commons-beanutils"
     }
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.springframework.data:spring-data-hadoop-store:2.5.0.RELEASE") {
+        exclude group: "commons-beanutils"
+    }
 }
