--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,7 @@ allprojects {
     sourceCompatibility = 1.8
 }
 
-
-
-
-
-
-subprojects {
+configure(subprojects.findAll {it.name != 'mail-hadoop-processor'}) {
     repositories {
         mavenCentral()
     }
