--- a/mail-hadoop-processor/build.gradle
+++ b/mail-hadoop-processor/build.gradle
@@ -1,14 +1,39 @@
 group 'org.istrid'
 version '0.0.1-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
+buildscript {
+    repositories {
+        jcenter()
+        maven { url 'http://repo.spring.io/plugins-release' }
+    }
+    dependencies {
+        classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.1'
+    }
+}
 repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.scala-lang', name: 'scala-library', version: '2.11.12'
+
+
+    compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.2.0'
+    compile('org.apache.hadoop:hadoop-client:2.8.2') {
+        exclude module: "slf4j-log4j12"
+        exclude group: "commons-beanutils"
+    }
+}
+
+project.afterEvaluate {
+    jar {
+        description = "Assembles a Hadoop ready jar file"
+        into('lib') {
+            from { configurations.compile.minus([configurations.compileOnly]) }
+        }
+        manifest {
+            attributes("Main-Class": "org.istrid.mail.HadoopJob")
+        }
+    }
 }
