--- a/mail-processing-executor/src/main/resources/application.properties
+++ b/mail-processing-executor/src/main/resources/application.properties
@@ -2,3 +2,5 @@ queue.url=tcp://localhost:61616?ha=true&amp;retryInterval=1000&amp;retryInterval
 queue.user=artemis
 queue.password=simetraehcapa
 queue.name=mailQueue
+
+max.batch.number=1
