--- a/mail-rest/build.gradle
+++ b/mail-rest/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.8.RELEASE'
+        springBootVersion = "1.5.8.RELEASE"
     }
     repositories {
         mavenCentral()
@@ -10,17 +10,13 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
+apply plugin: "java"
+apply plugin: "org.springframework.boot"
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.springframework.boot:spring-boot-starter-web")
 
     compile("commons-fileupload:commons-fileupload:1.3.3") {
-        exclude group: "commons-beanutils"
-    }
-
-    compile("org.springframework.data:spring-data-hadoop-store:2.5.0.RELEASE") {
         exclude group: "commons-beanutils"
     }
 }
