added graceful shutdown for queue listener

--- a/mail-processing-executor/src/main/resources/application.properties
+++ b/mail-processing-executor/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 queue.url=tcp://localhost:61616?ha=true&amp;retryInterval=1000&amp;retryIntervalMultiplier=1.0&amp;reconnectAttempts=-1
 queue.user=artemis
 queue.password=simetraehcapa
-queue.name=mailQueue
+queue.name=/queue/exampleQueue
 
-max.batch.number=1
+max.batch.number=5
