--- a/mail-rest/src/main/resources/application.properties
+++ b/mail-rest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-queue.url=tcp://localhost:61616?ha=true&amp;retryInterval=1000&amp;retryIntervalMultiplier=1.0&amp;reconnectAttempts=-1
+queue.url=tcp://localhost:61616?ha=true&amp;retryInterval=1000&amp;retryIntervalMultiplier=1.0&amp;reconnectAttempts=4
 queue.user=artemis
 queue.password=simetraehcapa
-queue.name=mailQueue
+queue.name=/queue/exampleQueue
 
 spring.http.multipart.max-file-size=100MB
 server.port=7070
