--- a/mail-rest/src/main/resources/application.properties
+++ b/mail-rest/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.http.multipart.enabled=false
 
 fs.defaultFS=hdfs://localhost:8020
 base.path=/test
+
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
