--- a/mail-processing-executor/src/main/resources/application.properties
+++ b/mail-processing-executor/src/main/resources/application.properties
@@ -4,3 +4,9 @@ queue.password=simetraehcapa
 queue.name=/queue/exampleQueue
 
 max.batch.number=5
+
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
