--- a/mail-rest/build.gradle
+++ b/mail-rest/build.gradle
@@ -15,8 +15,8 @@ apply plugin: "org.springframework.boot"
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-
     compile("commons-fileupload:commons-fileupload:1.3.3") {
         exclude group: "commons-beanutils"
     }
+    compile project(":mail-db-repository")
 }
